...
                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                            <integer key="value" value="16"/>
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sdE-8c-JJO" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="TdL-nv-CnJ"/>
                                                        <constraint firstAttribute="width" constant="44" id="ldh-lZ-Nav"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like_button_on"/>
...
                                <connections>
                                    <outlet property="delegate" destination="n07-U0-Stv" id="PQZ-zp-SDC"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aSl-GQ-yti">
                                <rect key="frame" x="8" y="11" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" hint="BackButton" identifier="BackButton" label="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="9yv-UV-BqQ"/>
                                    <constraint firstAttribute="width" constant="48" id="fnb-Sf-6l9"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="backward"/>
...
                    <view key="view" contentMode="scaleToFill" id="DV7-Ss-kLy">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kmu-MO-KRn">
                                <rect key="frame" x="52.666666666666657" y="699" width="288" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="OIw-Ru-eS8"/>
                                    <constraint firstAttribute="width" constant="288" id="UGs-2p-lq0"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <buttonConfiguration key="configuration" style="filled" title="Войти" titleAlignment="center">
...
            </objects>
            <point key="canvasLocation" x="-708" y="-959"/>
        </scene>
        <!--Web View View Controller-->
        <scene sceneID="nYj-hK-gl4">
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="clZ-Qc-nG1" customClass="WebViewViewController" customModule="Image_Feed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="yU4-Yj-Hdh">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ocN-EQ-47I">
                                <rect key="frame" x="0.0" y="87" width="393" height="689"/>
...
